# note-rags-services

./: .gitignore  README.md  clear-env.sh  docker-compose.yml  podman-compose.yml  pyproject.toml
.github/workflows/: deployment-notes-api.yml  update-database.yml
auth-api/: pyproject.toml
auth-api/app/: config.py  db.py  main.py
auth-api/app/models/: auth.py
auth-api/app/routes/: auth.py
auth-api/app/services/: jwt_service.py  user_service.py
auth-api/app/utils/: password.py
auth-api/tests/: conftest.py  test_auth.py  test_basic.py
auth-lib/: README.md  pyproject.toml
auth-lib/src/: jwt_service.py
auth-lib/src/auth_lib/: config.py  dependencies.py  jwt_service.py
auth-lib/tests/: README.md  conftest.py  test_integration.py  test_jwt_service.py  test_jwt_service_builder.py
chat-api/: Dockerfile  README.md  pyproject.toml
chat-api/app/: __init__.py  config.py  db.py  main.py
chat-api/app/models/: chat.py  query.py
chat-api/app/routes/: __init__.py  chats.py  contexts.py  queries.py
chat-api/app/services/: context.py  embeddings.py  query_service.py
chat-api/tests/: test_query_service.py  utils.py
db/: Dockerfile  README.md  TESTING.md  migration_template.py  pyproject.toml
db/alembic/: env.py
db/alembic/versions/: 0e5a232be495_initial_migration.py  50ce39d48e5f_user_schema.py  586c4ce5bbe0_add_document_s_content_hash.py  5f65a3c4dc55_initial_schema.py  6950b8b88c90_add_username_and_profile_completion_.py  b7b786355a46_migrate_to_cognito_auth.py  c0c0ce24cd30_chat_api_schemata.py  c71ba127181f_add_document_type_title_and_metadata.py  cac7d9b1fa9d_index_on_file_path.py
db/scripts/: init.sql
db/src/note_rags_db/: README.md  __init__.py  config.py  db.py  main.py  testing.py
db/src/note_rags_db/schemas/: __init__.py  conversation.py  document.py  user.py
db/tests/: test_config.py  test_testing.py
frontend/: .env.example  eslint.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/: app.css
frontend/src/app/: layout.tsx  page.tsx
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/chat/: +page.svelte
frontend/src/routes/notes/: +page.svelte
frontend/src/routes/queries/: +page.svelte
genai-api/: Dockerfile  README.md  pyproject.toml
genai-api/app/: __init__.py  config.py  db.py  main.py
genai-api/app/models/: conversation.py  query.py
genai-api/app/repositories/: conversation_repository.py
genai-api/app/routes/: __init__.py  contexts.py  conversations.py  queries.py
genai-api/app/services/: context_service.py  conversation_service.py  embeddings_service.py  message_service.py  query_service.py
genai-api/tests/: README.md  conftest.py  test_queries_router.py  utils.py
infrastructure/: .gitignore  .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  terraform.tf  variables.tf
infrastructure/modules/bastion/: bastion_userdata.sh  main.tf  outputs.tf  variables.tf
infrastructure/modules/database/: main.tf  outputs.tf  variables.tf
infrastructure/modules/ecr/: main.tf  outputs.tf  variables.tf
infrastructure/modules/eks/: main.tf  outputs.tf  variables.tf
infrastructure/modules/networking/: main.tf  outputs.tf  variables.tf
infrastructure/modules/security/: main.tf  outputs.tf  variables.tf
infrastructure/scripts/: apply.sh  plan.sh
ingestion-api/: Dockerfile  README.md  pyproject.toml
ingestion-api/api/: __init__.py  config.py  db.py  main.py
ingestion-api/api/models/: __init__.py  events.py
ingestion-api/api/routes/: __init__.py  events.py  health.py
ingestion-api/api/schemas/: document.py
ingestion-api/api/services/: document_service.py  embeddings.py
ingestion-api/api/utils/: file_processor.py  text_splitter.py
ingestion-api/app/: config.py  db.py  logging_config.py  main.py
ingestion-api/app/models/: __init__.py  events.py  responses.py
ingestion-api/app/routes/: events.py  health.py
ingestion-api/app/schemas/: document.py
ingestion-api/app/services/: document_service.py  embeddings.py
ingestion-api/app/utils/: file_processor.py  text_splitter.py
ingestion-api/tests/: conftest.py  test_integration.py  test_process_file_change.py
ingestion-api/tests/integration/: test_api.py  test_db.py
ingestion-api/tests/unit/: test_process_file_change.py
ingestion-api/tests/unit/routes/: test_binary_events.py  test_events.py  test_file_events.py  test_text_events.py
ingestion-api/tests/unit/services/: test_document_service.py
ingestion-api/tests/unit/utils/: test_date_serialization.py  test_file_processors.py
k8s/: README.md  ingress.yaml  namespace.yaml  notes-api-configmap.yaml  notes-api-deployment.yaml  notes-api-service.yaml  postgres-configmap.yaml  postgres-deployment.yaml  postgres-service.yaml  postgres-storage.yaml
k8s/notes-api/: deployment.yaml  external-secret.yaml  secrets-store.yaml  service-account.yaml  service.yaml
notes-api/: Dockerfile  README.md  main.py  pyproject.toml
notes-api/app/: config.py  db.py  main.py
notes-api/app/models/: document.py  note.py  user.py
notes-api/app/repositories/: documents_repository.py  notes_repository.py
notes-api/app/routes/: __init__.py  auth.py  auth_test.py  health.py  notes.py
notes-api/app/services/: notes_service.py
notes-api/tests/: conftest.py  test_main.py
notes-api/tests/routes/: test_notes.py
notes-api/tests/services/: test_notes_service.py
scripts/: dev-setup.sh  get-cognito-token.py  init.sql  manage_k8s_secrets.py  requirements.txt
