[project]
name = "auth-lib"
version = "0.1.1"
description = "Shared package with authentication utilities"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=45.0.5",
    "fastapi[standard]>=0.116.1",
    "jose>=1.0.0",
    "note-rags-db",
    "python-jose[cryptography]>=3.5.0",
    "structlog>=25.4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
]

[tool.uv.sources]
note-rags-db = {workspace =  true}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/auth_lib"]

