[project]
name = "chat-api"
version = "0.1.0"
description = "Chat API microservice for RAG-powered chatbot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.6",
    "langchain>=0.3.26",
    "langgraph>=0.5.1",
    "pydantic-settings>=2.10.1",
    "greenlet>=3.2.3",
    "langchain-openai>=0.3.27",
    "note-rags-db"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
lint = [
    "ruff>=0.12.2",
]
test = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
]

[tool.uv.sources]
note-rags-db = {path = "../db"}
