[project]
name = "genai-api"
version = "0.1.0"
description = "GenAI API microservice for RAG-powered note-taking system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.42",
    "asyncpg>=0.30.0",
    "redis>=6.4.0",
    "python-multipart>=0.0.20",
    "langchain[openai]>=0.3.27",
    "langgraph>=0.6.4",
    "pydantic-settings>=2.10.1",
    "greenlet>=3.2.4",
    "langchain-openai>=0.3.29",
    "note-rags-db",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
lint = [
    "ruff>=0.12.8",
]
test = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
]

[tool.uv.sources]
note-rags-db = { workspace = true }

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "app/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
