[project]
name = "ingestion-api"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "greenlet>=3.2.3",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "openai>=1.97.1",
    "pgvector>=0.4.1",
    "psycopg>=3.2.9",
    "pydantic-settings>=2.10.1",
    "pypdf>=5.9.0",
    "pypdf2>=3.0.1",
    "sqlalchemy>=2.0.41",
    "structlog>=25.4.0",
    "note-rags-db",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
]

[tool.uv.sources]
note-rags-db = { workspace = true }
