[project]
name = "notes-api"
version = "0.1.0"
description = "Notes API microservice for managing notes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.41",
    "asyncpg>=0.30.0",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.10.1",
    "greenlet>=3.2.3",
    "note-rags-db",
    "auth-lib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv.sources]
note-rags-db = { workspace = true }
auth-lib = { workspace = true }
